[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "httk-core"
version = "1.0.0"
description = "httk2 core functionality"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rickard Armiento", email = "rickard-gpg@armiento.net" }]

dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
